patch hateoas